--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <button id="messageButton">Click Me</button>
-        <p id="message">Click the button to display a message.</p>
+        <p id="message"> surprise</p>
     </div>
-    <img id="hiddenImage" src="photo_6325320052353646346_y.jpg" style="display: none; width: 555px; height: 800px;">
+    <img id="hiddenImage" src="photo_6325320052353646346_y.jpg" style="display: none; width: 755px; height: 800px;">
 
 
     
